# python-gui-real-time-plotting

./: README.md  pyproject.toml  setup.py  setup_simulation.py
dev/: RangeFinder.py  RangeFinderAll.py  RangeFinderPlotter.py  RangeFinderPopups.py  tempCodeRunnerFile.py
rangefinder/: custom_scan_widget.py  graphconsole.py  main.py  mainapp.py  plotter.py  theme.py
realtimeplotter/: custom_scan_widget.py  detailed_graph_widget.py  helpers.py  plotter.py  real_time_plotter.py  real_time_plotter_widget.py  real_time_sender.py  testdata.txt  theme.py
realtimeplotter/temp/: RangeFinder.py  RangeFinderAll.py  RangeFinderPlotter.py  RangeFinderPopups.py
simulation/: plot_simulation.py
